tests/wsf/pass/integer_bounds/copy_slide_2^31-1.wsa
; Passes on push 32-bit (and push 64-bit) machines
copy 2147483647
slide 2147483647
exit
