tests/wsf/fail/integer_bounds/slide_2^63.wsa
; Fails on push 64-bit (and push 32-bit) machines
slide 9223372036854775808
exit
